Actions
Bug #11799
closedrootnex: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc8:
../../i86pc/io/immu_intrmap.c:998:6: error: cast between incompatible function types from 'int (*)(immu_t *)' {aka 'int (*)(struct immu *)'} to 'uint_t (*)(char *, char *)' {aka 'unsigned int (*)(char *, char *)'} [-Werror=cast-function-type] (avfunc)(immu_intr_handler), intr_handler_name, irq, ^ cc1: all warnings being treated as errors
Testing done: build/install/boot.
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 7fd1b424e267a2cdece3dce940e5722f9b785fed
commit 7fd1b424e267a2cdece3dce940e5722f9b785fed Author: Toomas Soome <tsoome@me.com> Date: 2019-11-14T08:12:04.000Z 11799 rootnex: cast between incompatible function types Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions